fix spacing

--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -8,11 +8,11 @@
     top: 20px;
 
 	h2 {
-		margin: 8px 0;
+		margin: 2vh 0;
 	}
 
 	h1 {
-		margin-bottom: 24px;
+		margin-bottom: 3vh;
 	}
 }
 
